# Ride-application-Backend

./: .env.example  .gitignore  BACKEND_ARCHITECTURE.md  Dockerfile  MIGRATION.md  README.md  alembic.ini  pyproject.toml  render.yaml  requirements.txt
alembic/: env.py
alembic/versions/: 001_initial.py  002_module2_database.py  003_unified_backend.py  004_driver_registration_fields.py  005_admin_last_login_tz.py  007_vehicle_cancellation_charge.py  008_vehicle_service_group.py  009_vehicle_rental_hours.py  010_vehicle_type_pricing_columns.py  011_driver_emergency_contacts.py  012_dual_ratings_user_rating_avg.py  013_student_pass_subscriptions.py  014_subscription_payments.py  015_wallet_topup_payments.py  016_commission_wallet_system.py  017_vehicle_commission_percentage.py  018_notification_fcm_device_fields.py  019_user_gender.py  020_vehicle_display_order.py  021_vehicle_type_service_group_unique.py  022_bwr_public_ids.py  023_remove_xl_vehicle_types.py  024_referral_earn.py  025_user_withdrawals.py  026_driver_bank_full_account.py  027_ride_women_rider_preference.py  028_ride_women_safety.py  029_ride_stops.py  030_driver_selfie_shifts.py  031_corporate_module.py
app/: __init__.py  main.py
app/admin/: models.py
app/analytics/: __init__.py
app/api/: router.py
app/auth/: dependencies.py  models.py  service.py
app/bootstrap/: default_data.py
app/commission/: __init__.py  (+2 more)
docker/: docker-compose.yml  nginx.conf
scripts/: check_neon_db.py  init_postgres.py  init_postgres.sql  render_start.sh  seed.py
tests/: conftest.py  test_api.py  test_rides.py
(+160 files in other folders)
